--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -5,9 +5,6 @@
 \section{Test results}
 The GPS manipulation test as described in chapter \ref{gps_manipulation} demonstrated the ability to quickly identify a GPS disturbance and also demonstrated the ability to protect the atomic clock by disabling the disciplining. The system did, however, fail to steer the atomic clock. When we attempted to reset and debug the system, we encountered a bug in the clock model as well. The bug affected the way the clock model initializes from the configuration file, which meant that the model would need at least 48 hours to rebuild. This is probably just a minor bug but because of the time constraint, we where forced to seize testing. 
 
-\section{Sensor server performance}
-During the GPS manipulation tests as described in chapter \ref{gps_manipulation}, the sensor server part of the atomic clock controller worked perfectly. The system was stable and performed as designed over longer periods of time (over 4 days). The system logged data reliably and without fault, accepted connections and was responsive at all times tested. There were no memory leaks or segmentation faults and the system facilitated the detection of our GPS manipulation attempt with low latency. The system would probably react even faster if it received data from the atomic clock and GPS receivers at a higher frequency. The communication with the atomic clock also worked flawlessly, providing data for logging and the model as expected.
-
 \section{Shortcomings in current implementation}
 This section is used to discuss some of the shortcomings in the current version of the atomic clock controller and sensor server architecture. Some functions were never implemented and others were not finished in time.
 
@@ -24,7 +21,7 @@ Modified Julian Day (MJD) is a way to express both date and time as a single num
 For some reason, it proved to be a significant challenge to implement a solution in C to configure, read and write from the atomic clock. The best solution did not even provide a reliable means of communicating with the atomic clock even though communication with the GPS receivers which in theory should have been exactly the same, was no problem. Once time got tight, I made the decision to drop the development of the atomic clock serial communication module written in C, and decided to use \texttt{query\_csac.py} by invoking with \texttt{popen()}. 
 
 \section{Choice of programming language}
-The atomic clock controller software was originally planned to be written in Java since this was my most fluent programming language. Java is great language. It is object oriented, it has a garbage collector and a lot of useful libraries. As development commenced it quickly became apparent that some parts of the code would be performance critical and that portability really was not that important anyway. The platform was already chosen and I could not think any reason for it to change. I decided to look at other languages. Because performance was a concern Python was also quickly dismissed as an option. C++ would probably have been the best choice but having never written anything in C before made it sound more exciting and like a nice opportunity to learn something new. During the planning phase of the atomic clock controller development, raspbian-2015-05-07 was the latest build. It came with GCC 4.6.3 which only had experimental support for C11(\cite{GCC11}). With C11 no longer considered an option, C99 was the obvious choice given its attractive features like:
+The atomic clock controller software was originally planned to be written in Java since this was my most fluent programming language. Java is a great language. It is object oriented, it has a garbage collector and a lot of useful libraries. As development commenced it quickly became apparent that some parts of the code would be performance-critical and that portability really was not that important anyway. The platform was already chosen and I could not think of any reason for us to change it. I decided to look at other languages. Because performance was a concern Python was also quickly dismissed as an option. C++ would probably have been the best choice but never having written anything in C before made it sound more exciting and like a nice opportunity to learn something new. During the planning phase of the atomic clock controller development, raspbian-2015-05-07 was the latest build. It came with GCC 4.6.3 which only had experimental support for C11(\cite{GCC11}). With C11 no longer considered an option, C99 was the obvious choice given its attractive features like:
 \begin{itemize}
   \item Variable-length arrays.
   \item Single line comments.
