--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -156,8 +156,13 @@ texcl=false,
 program={Informatikk: programmering og nettverk},
 long]
 
+\subsection*{Foreword}
+Five years ago I started studying for my bachelors degree in computer science at Oslo and Akershus University college of applied sciences. I had no idea what I was doing and I can clearly recall a professor telling us that "you are here because you want to learn how to program". At that point, this was news to me. Five years later I am submitting my master thesis and all I want to do is thank the people who enabled me.
+
+Thank you, Harald Hauglin for guiding me when I doubted myself and for being patient with me and my uninformed questions. Thank you, Sverre Holm for being my supervisor and for being honest when I needed it. Thank you, Tim Dunker for providing excellent assistance and support. Thank you, Bao Chi Tran Nguyen for teaching me how to program without letting me feel utterly useless. And thank you, Ingvild Totland Pettersen for being my loving partner and for dealing with all my frustration and immaturity.
+
 \begin{abstract}
-The goal of this project was to create a prototype of a smart atomic clock controller running on commodity hardware, capable of spoof proofing a GPS controlled atomic clock, i.e harden it against GPS jamming and spoofing attacks. The project aims to use a multi-layered approach to evaluate the integrity of GPS signals and to use knowledge about the atomic clock and its behavior when GPS disciplined to detect and mitigate a spoofing attack. We aim to demonstrate the efficiency of network enabling commodity GPS receivers and connecting them to a atomic clock controller by using a client/server architecture facilitating GPS and atomic clock data analysis. The preliminary GPS manipulation tests demonstrates the feasibility of our proposal.
+The goal of this project was to create a prototype of a smart atomic clock controller running on commodity hardware, capable of spoof proofing a GPS controlled atomic clock, i.e harden it against GPS jamming and spoofing attacks. The project aims to use a multi-layered approach to evaluate the integrity of GPS signals and to use knowledge about the atomic clock and its behavior when GPS disciplined, to detect and mitigate a spoofing attack. Many solutions have been proposed to solve the problem of GPS time spoofing \cite{HengChouGao14}, but as far as we know this is an issue rarely tackled using commodity hardware and simple techniques. We aim to demonstrate the efficiency of network enabling commodity GPS receivers and connecting them to a atomic clock controller by using a client/server architecture facilitating GPS and atomic clock data analysis. The preliminary GPS manipulation tests demonstrates the feasibility of our proposal. 
 \end{abstract}
 
 % Where = hvor
