--- a/thesis/software.tex
+++ b/thesis/software.tex
@@ -20,7 +20,7 @@ In order to connect many GPS receivers to the atomic clock controller, we decide
   \item WiFi
   \item 4G (cellular)
 \end{itemize}
-Because reaction time is a concern, high latency media is not recommended \footnote{IP over Avian Carriers as described in RFC 1149 is highly discouraged}. The GPS receivers that we have chosen to use do not have a network interface, we instead use Raspberry PIs. A GPS receiver is connected to a Raspberry PI thus giving it a network interface. Considering how cheap single board computers have become, the price of a Raspberry PI can be justified even just to network enable a GPS receiver. The latest model of the Raspberry Pi has even got a built in wireless network interface. See \ref{platform} for more about the Raspberry Pi 3. The combination of the GPS receiver and the Raspberry PI are in this report abstractly seen as one device. We call this device a Sensor. The Sensor is responsible for reporting data to the Server and not much more. The Sensor can be deployed using already existing infrastructure to communicate, thus making it easier to deploy than if each GPS receiver had to be cabled directly to the atomic clock controller. There is no denying that the implementation of a Server/Client model greatly increases the complexity of the atomic clock controller software, but it makes up for it by eliminating the need for long signal cables and amplifiers. We call this approach the \textit{Sensor Server} model.
+Because reaction time is a concern, high latency media is not recommended \footnote{IP over Avian Carriers as described in RFC 1149 is highly discouraged}. The GPS receivers that we have chosen to use do not have a network interface, we instead use Raspberry PIs. A GPS receiver is connected to a Raspberry PI thus giving it a network interface. Considering how cheap single board computers have become, the price of a Raspberry PI can be justified even just to network enable a GPS receiver. The latest model of the Raspberry Pi has even got a built in wireless network interface. See \ref{platform} for more about the Raspberry Pi 3. The combination of the GPS receiver and the Raspberry PI are in this report abstractly seen as one device. We call this device a sensor. The sensor is responsible for reporting data to the Server and not much more. The sensor can be deployed using already existing infrastructure to communicate, thus making it easier to deploy than if each GPS receiver had to be cabled directly to the atomic clock controller. There is no denying that the implementation of a Server/Client model greatly increases the complexity of the atomic clock controller software, but it makes up for it by eliminating the need for long signal cables and amplifiers. We call this approach the \textit{Sensor Server} model.
 
 \section{Architecture description}\label{arch_desc}
 In order to connect the Sensors to the server, the atomic clock controller's software needs to be able to:
@@ -31,21 +31,21 @@ In order to connect the Sensors to the server, the atomic clock controller's sof
 \end{itemize}
 These are tasks that the atomic clock controller needs to be able to perform as well as controlling the clock and analyzing data. In order to implement the Server/Client model, the Server is implemented using the Linux Socket API. The API is based on BSD sockets and is available in in almost all Unix-like operating system (\cite{LINUX_KERNEL}, p.610). A socket is a handle that can be passed by a program to the network API in order to use the network connection. The plan was briefly to use Glib \cite{GLIB}, a library that provides building blocks for libraries and applications written in C, instead of using low-level sockets. This idea was scrapped because I felt that it would be overkill for this implementation.
 
-Having decided \textit{how} the clients should connect to the server, the next challenge becomes how the server should communicate with the clients and vice versa. We decided to use what is called \textit{blocking I/O} and \textit{fork()}. This is a very common approach, but not the fastest (\cite{UNIXN_WBA}, p. 188). It is however quite easy to implement. Blocking I/O means that read operations on the socket blocks the main thread in the process until data has been received. This is not as dramatic as it might seem: If a Socket call cannot be completed immediately the process who issued the call will be put to sleep thus enabling the scheduler to schedule other processes for execution until conditions are right for the sleeping process (\cite{UNIXN_WBA}, p.435). Fork() is a system call used to create a new process. The new process is called a child and the process that called the fork() system call is called the parent. The child process is a duplicate of the parent process. The alternative to using fork() is to create a thread. The creation of threads are typically less expensive in terms of CPU cycles than the creation of processes, but presents their own challenges. Processes always have their own virtual address space as opposed to threads who share their address space with the other threads within the process. This makes programming with threads more complex. The result of a thread crashing may have a more severe impact on the other threads within the same process since they all shared the same data. The new process is used by the server to handle the newly created connection. This means that for every connected client, there is a process created. This of course means that this solution does not scale awfully well. This is however not a big problem for us since the time taken for a Sensor to connect to the server really does not matter. Once all Sensors in a setup have connected, they should not disconnect unless taken down for maintenance or replacement. 
+Having decided \textit{how} the clients should connect to the server, the next challenge becomes how the server should communicate with the clients and vice versa. We decided to use what is called \textit{blocking I/O} and \textit{fork()}. This is a very common approach, but not the fastest (\cite{UNIXN_WBA}, p. 188). It is however quite easy to implement. Blocking I/O means that read operations on the socket blocks the main thread in the process until data has been received. This is not as dramatic as it might seem: If a Socket call cannot be completed immediately the process who issued the call will be put to sleep thus enabling the scheduler to schedule other processes for execution until conditions are right for the sleeping process (\cite{UNIXN_WBA}, p.435). Fork() is a system call used to create a new process. The new process is called a child and the process that called the fork() system call is called the parent. The child process is a duplicate of the parent process. The alternative to using fork() is to create a thread. The creation of threads are typically less expensive in terms of CPU cycles than the creation of processes, but presents their own challenges. Processes always have their own virtual address space as opposed to threads who share their address space with the other threads within the process. This makes programming with threads more complex. The result of a thread crashing may have a more severe impact on the other threads within the same process since they all shared the same data. The new process is used by the server to handle the newly created connection. This means that for every connected client, there is a process created. This of course means that this solution does not scale awfully well. This is however not a big problem for us since the time taken for a sensor to connect to the server really does not matter. Once all sensors in a setup have connected, they should not disconnect unless taken down for maintenance or replacement. 
 
-Using processes presented us with a new challenge, interprocess communication. A process is not aware of its neighbor. For all it knows, it is the only process running. Every time a client connects, a new process is born to take care of the communication with the new client. Since every process has its own virtual address space, the processes are isolated from each other. This posed a challenge because we wanted the atomic clock controller to collect data from sensors for processing. Inter process communication (IPC) is nothing new, and one way to accomplish it, is to use shared memory segments that are accessible for all the processes. The processes store the data they have received from their respective clients in the shared memory segment. That way it is easy for one process handling a Sensor to check up on data received from another Sensor. This kind of functionality was seen as valuable, but is not utilized to the extent it was envisioned. If more filters are added, the architecture would probably make more sense as the current ones do not really use the shared memory to cross check data. 
+Using processes presented us with a new challenge, interprocess communication. A process is not aware of its neighbor. For all it knows, it is the only process running. Every time a client connects, a new process is born to take care of the communication with the new client. Since every process has its own virtual address space, the processes are isolated from each other. This posed a challenge because we wanted the atomic clock controller to collect data from sensors for processing. Inter process communication (IPC) is nothing new, and one way to accomplish it, is to use shared memory segments that are accessible for all the processes. The processes store the data they have received from their respective clients in the shared memory segment. That way it is easy for one process handling a sensor to check up on data received from another sensor. This kind of functionality was seen as valuable, but is not utilized to the extent it was envisioned. If more filters are added, the architecture would probably make more sense as the current ones do not really use the shared memory to cross check data. 
 
 Using shared memory is by no means the only way to implement interprocess communication. Another approach to inter process communication that was considered, was using a \texttt{pipe}. The pipe can be seen as a unidirectional channel where data written to end of the pipe is buffered by the operating system until the data is read from the other end of the pipe. This would however mean that each process would not only have to listen to the client connected, but also to the pipes connecting them to the other processes. This would be the case with message passing and sockets as well. In contrast, the shared memory approach allowed for the server to act as a single unit even though many processes are at work. Allowing multiple processes to share the same memory segment is like asking for trouble. At some point the program will suffer from race conditions and unexpected behavior. The shared memory segments are therefor protected with semaphores.
 
-The atomic clock controller does not have graphical user interface. Seeing how it was going to operate much like a service, the need for a graphical user interface was not prioritized. A user can interface with the system by logging on using telnet, and issue commands. In order to separate the intention of a connected client, be it to deliver GPS data or to send commands to system, roles were made. A client connected to the server may have two roles. It can choose to  either be a sensor or a monitor. The Sensor role is already explained. The Monitor role was added in order for a user of the system to connect to the server and check status or issue commands. For a client to assume the role of a Monitor, the client has to pick a negative integer as ID number. This way, the Server does not expect you as a client to report any NMEA data the way it would with a Sensor. The monitor role can also be used to interface with the Server. See (\ref{interface}) for more.
+The atomic clock controller does not have graphical user interface. Seeing how it was going to operate much like a service, the need for a graphical user interface was not prioritized. A user can interface with the system by logging on using telnet, and issue commands. In order to separate the intention of a connected client, be it to deliver GPS data or to send commands to system, roles were made. A client connected to the server may have two roles. It can choose to  either be a sensor or a monitor. The sensor role is already explained. The Monitor role was added in order for a user of the system to connect to the server and check status or issue commands. For a client to assume the role of a Monitor, the client has to pick a negative integer as ID number. This way, the server does not expect you as a client to report any NMEA data the way it would with a sensor. The monitor role can also be used to interface with the server. See (\ref{interface}) for more.
 
 \subsection{Security}
-Implementing good security is not an easy task and should not be taken lightly. The goal when developing the Sensor Server was to produce a rough prototype that could prove our concept. Time was therefor allocated towards producing features that would realize this goal instead of attempting to implement security mechanisms that would have been flawed anyway because of time constraints.
+Implementing good security is not an easy task and should not be taken lightly. The goal when developing the Sensor server was to produce a rough prototype that could prove our concept. Time was therefor allocated towards producing features that would realize this goal instead of attempting to implement security mechanisms that would have been flawed anyway because of time constraints.
 
 \chapter{Atomic clock controller implementation}
 
-\section{The Sensor Server} 
-Figure \ref{sketch} shows a simplified block diagram of the Sensor Server and its tasks. Server tasks include:
+\section{The Sensor server} 
+Figure \ref{sketch} shows a simplified block diagram of the sensor server and its tasks. server tasks include:
 \begin{itemize}
   \item Handle connections to clients.
   \item Update structures as the clients' status' changes (disconnects or gets kicked out).
@@ -62,7 +62,7 @@ Figure \ref{sketch} shows a simplified block diagram of the Sensor Server and it
 \end{figure}
 
 \section{Implementation description}
-In the following section, the architecture and inner workings, data structures and key components of the Sensor Server will be explained. The Server core (\ref{server_core}) consists of the source code in \texttt{sensor\_server.c}. The Parser and Handler spans over texttt{session.c} and texttt{actions.c}. The atomic clock model and the associated filters' source code can be found in \texttt{csac\_filter.c}. The filter using GPS data is in \texttt{filters.c}. Figure \ref{server_call_graph} shows a simplified call graph for the Sensor Server.
+In the following section, the architecture and inner workings, data structures and key components of the Sensor server will be explained. The server core (\ref{server_core}) consists of the source code in \texttt{sensor\_server.c}. The Parser and Handler spans over texttt{session.c} and texttt{actions.c}. The atomic clock model and the associated filters' source code can be found in \texttt{csac\_filter.c}. The filter using GPS data is in \texttt{filters.c}. Figure \ref{server_call_graph} shows a simplified call graph for the Sensor server.
 
 \subsection{Server core}\label{server_core}
 \begin{figure}
