--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -1,7 +1,8 @@
 \documentclass[../main.tex]{subfiles}
 
 \chapter{Conclusion}
-The prototype developed and described in this report, demonstrates that a
-fully operational spoof proof atomic clock controller would resist a spoofing attack mounted with a sophisticated GPS spoofer like the Civil GPS spoofer \cite{EVPMUGA}. We demonstrated the current implementation's ability to detect and in a limited sense mitigate, a simulated spoofing attack, using multi-layered defense mechanisms. The frequency steering filter made possible by the clock model would have detected steering attempts larger than $50(10^{12})$ or 0.05 nanoseconds per seconds as shown in section \ref{test2}. Even if a spoofing attack was done carefully and slowly enough not to trigger the clock model based filters, it would not have been able to spoof two different receivers without giving away the attack (see \ref{cspakp}). This would have required multiple spoofers spoofing individual GPS receivers. The spoofers would have to be meticulously tuned in order not to spoof neighboring receivers. This makes spoofing attempts very challenging to execute. Introducing a third receiver which with sensor server architecture can be done with ease, would make it even harder. 
+The prototype developed and described in this report, demonstrates that a fully operational spoof proof atomic clock controller would resist a spoofing attack mounted with a sophisticated GPS spoofer like the Civil GPS spoofer \cite{EVPMUGA}. We demonstrated the current implementation's ability to detect and in a limited sense mitigate, a simulated spoofing attack, using multi-layered defense mechanisms. The frequency steering filter made possible by the clock model would have detected steering attempts larger than $50\times10^{-12}$ or 0.05 nanoseconds per seconds as shown in section \ref{test2}. Even if a spoofing attack was done carefully and slowly enough not to trigger the clock model based filters, it would not have been able to spoof two different receivers without giving away the attack (see section \ref{cspakp}). This would have required multiple spoofers spoofing individual GPS receivers. The spoofers would have to be meticulously tuned in order not to spoof neighboring receivers. This makes spoofing attempts very challenging to execute. Introducing a third receiver, which with sensor server architecture can be done with ease, would make it even harder. 
+
+During the GPS manipulation tests as described in chapter \ref{gps_manipulation}, the sensor server architecture proved its worth and worked perfectly. The system was stable and performed as designed over longer periods of time (over 4 days). The system logged data reliably and without fault, accepted connections and was responsive at all times tested. There were no memory leaks or segmentation faults and the system facilitated the detection of our GPS manipulation attempt with low latency. The system would probably react even faster if it received data from the atomic clock and GPS receivers at a higher frequency. The communication with the atomic clock also worked flawlessly, providing data for logging and the model as expected.
 
 We have demonstrated the efficiency of creating a detection network using the sensor server architecture running on commodity hardware receiving generic GPS data from commodity receivers. We have demonstrated that it is possible to detect GPS disturbances without using an atomic clock as reference but just by using GPS receivers. The detection network combined with an atomic clock and associated model may provide both detection and mitigation during a spoofing attack.
