See you tomoroow

--- a/presentation.tex
+++ b/presentation.tex
@@ -143,6 +143,32 @@
   \end{columns}
 \end{frame}
 
+\section{Implementasjon}
+\subsection{Krav}
+\begin{frame}
+  \frametitle{Krav}
+  Følgende krav ble identifisert til systemet:
+  \begin{itemize}
+    \item Kunne detektere at angrep hurtig
+    \item Ha mulighet for å logge data
+    \item Rask og enkel tilgang til innsamlet data
+    \item Ha støtte for mange GPS mottakere
+    \item Kunne administreres over nettverk
+    \item Konfigurerbar 
+  \end{itemize}
+\end{frame}
+
+\subsection{Implementasjon}
+\begin{frame}
+  \frametitle{Implementasjon}
+  \begin{itemize}
+    \item Client/Server modell
+    \item Filtre
+    \item Klokkemodell
+    \item Klokkestyring
+  \end{itemize}
+\end{frame}
+
 \section{Testing}
 \begin{frame}
 \frametitle{Beskrivelse}
